--- a/components/03-organisms/menu/utility-nav/_yds-utility-nav.scss
+++ b/components/03-organisms/menu/utility-nav/_yds-utility-nav.scss
@@ -67,8 +67,7 @@
     border: none;
     color: inherit;
     min-height: var(--size-click-target-minimum);
-    width: 7rem;
-    padding: 0;
+    width: 7.25rem;
 
     &::placeholder {
       color: inherit;
